--- a/css/css.css
+++ b/css/css.css
@@ -630,6 +630,9 @@ a[href^="tel"]{
     color:inherit;
     text-decoration:none;
 }
+#contact-form{
+display: none;
+}
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
@@ -888,19 +891,19 @@ border: 0px solid yellow;
   height: 35vw;
   border: 0px solid blue;
   display: flex;
-  width:33.33%;
+  width:30%;
 }
 
 #contact-title{
    color: #fefefe;
   text-align: center;
   margin: auto;
-  border: 1px solid red;
+  border: 0px solid red;
   padding-top:0;
   /*height: 10%;*/
 }
 #contact-info{
-  width: 33.33%;
+  width: 70%;
   border: 0px solid red;
   padding: 3vw;
 }
@@ -913,7 +916,10 @@ border: 0px solid yellow;
 
 }
 
-
+#contact-form{
+  border: 1px solid red;
+  width: 70%;
+}
 
 
 
