--- a/css/css.css
+++ b/css/css.css
@@ -623,7 +623,7 @@ margin-bottom: .5em;
 .contact-content{
   font-size: 1em;
   color:#9a9a9a;
-  
+  display: block;
   text-align: left;
 }
 a[href^="tel"]{
@@ -633,6 +633,17 @@ a[href^="tel"]{
 #contact-form{
 display: none;
 }
+
+.footer{
+  height: 6vh;
+}
+#copyright{
+  font-size: 1em;
+  color:#9a9a9a;
+  text-align: left;
+}
+
+
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
@@ -918,7 +929,7 @@ border: 0px solid yellow;
 
 #contact-form{
   display: block;
-  border: 1px solid red;
+  border: 0px solid red;
   width: 100%;
   height
 }
@@ -926,10 +937,18 @@ border: 0px solid yellow;
   width: 70%;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid blue;
+  border: 0px solid blue;
+  padding: 3vw;
 }
-
-
+.footer{
+  height: 6vh;
+}
+#copyright{
+  font-size: .3em;
+  color:#9a9a9a;
+  display: block;
+  text-align: left;
+}
 
 }
 
