--- a/css/css.css
+++ b/css/css.css
@@ -8,6 +8,8 @@
 /* zocial */
 [class*="zocial-"]:before {
   font-family: 'zocial', serif, sans-serif;
+  display: inline-block;
+  width: 2vw;
 }
 
 *{
