--- a/css/css.css
+++ b/css/css.css
@@ -640,7 +640,7 @@ display: none;
   
   padding-left: 6vw;
   padding-right: 6vw;
-  border: 1px solid yellow;
+  border: 0px solid yellow;
 }
 #copyright{
   font-size: 1em;
@@ -988,7 +988,8 @@ border: 0px solid yellow;
 
 [class*="zocial-"]:before:hover {
   
-  color: #666666;
+  color: #9a9a9a;
+  margin-top: 0px;
 }
 
 
