--- a/css/css.css
+++ b/css/css.css
@@ -967,7 +967,7 @@ border: 0px solid yellow;
   
   padding-left: 8vw;
   padding-left: 8vw;
-  height: .5em;
+  height: 1em;
 }
 #copyright{
   font-size: .3em;
