--- a/css/css.css
+++ b/css/css.css
@@ -990,19 +990,19 @@ border: 0px solid yellow;
 }
 
 .zocial-facebook{
-  text-align: top;
+  padding: 0px;
   margin-top: 0px;
 }
 .zocial-fivehundredpx{
-  text-align: top;
+padding: 0px;
   margin-top: 0px;
 }
 .zocial-linkedin{
-  text-align: top;
+padding: 0px;
   margin-top: 0px;
 }
 .zocial-weibo{
-  text-align: top;
+padding: 0px;
   margin-top: 0px;
 }
 
