--- a/css/socicon.css
+++ b/css/socicon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'si';
-    src: url('../scoicon/socicon.eot');
-    src: url('../scoicon/socicon.eot?#iefix') format('embedded-opentype'),
-         url('../scoicon/socicon.woff') format('woff'),
-         url('../scoicon/socicon.ttf') format('truetype'),
-         url('../scoicon/socicon.svg#icomoonregular') format('svg');
+    src: url('../socicon/socicon.eot');
+    src: url('../socicon/socicon.eot?#iefix') format('embedded-opentype'),
+         url('../socicon/socicon.woff') format('woff'),
+         url('../socicon/socicon.ttf') format('truetype'),
+         url('../socicon/socicon.svg#icomoonregular') format('svg');
     font-weight: normal;
     font-style: normal;
  
@@ -13,7 +13,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     @font-face {
         font-family:si;
-        src: url(PATH_TO/socicon.svg) format(svg);
+        src: url(../socicon/socicon.svg) format(svg);
     }
 }
 
