--- a/css/socicon.css
+++ b/css/socicon.css
@@ -46,8 +46,8 @@
     display:block;
     position: relative;
     z-index: 1;
-    width: 38px;
-    height: 38px;
+    width: 1em;
+    height: 1em;
     line-height: 38px;
     font-size: 20px;
     -webkit-border-radius: 100px;
@@ -55,7 +55,7 @@
     border-radius: 100px;
     margin-right: 10px;
     color: #ffffff;
-    background-color: #ececec;
+    
 }
 
 .soc-icon-last{
@@ -77,3 +77,25 @@
 .soc-linkedin:before {
     content:'j';
 }
+
+
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+
+.soc li a {
+    font-size: .3em;
+}
+
+
+
+
+
+}
+
+
+
