--- a/css/socicon.css
+++ b/css/socicon.css
@@ -17,6 +17,7 @@
     }
 }
 
+
 .soc {
     overflow:hidden;
     margin:0; padding:0;
@@ -40,6 +41,17 @@
     -ms-box-sizing:border-box;
     -o-box-sizing:border-box;
     box-sizing:border-box;
+
+    -o-transition:.1s;
+    -ms-transition:.1s;
+    -moz-transition:.1s;
+    -webkit-transition:.1s;
+    transition:.1s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+
     overflow:hidden;
     text-decoration:none;
     text-align:center;
@@ -48,35 +60,34 @@
     z-index: 1;
     width: 1em;
     height: 1em;
-    line-height: 38px;
-    font-size: 20px;
+    line-height: 29px;
+    font-size: 15px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px;
     margin-right: 10px;
     color: #ffffff;
-    background-color: red;
-    
+    background-color: #ececec;
 }
 
 .soc-icon-last{
     margin:0 !important;
 }
 
-.soc-twitter:before {
-    content:'a';
-}
 .soc-facebook:before {
     content:'b';
-}
-.soc-google:before {
-    content:'c';
 }
 .soc-pinterest:before {
     content:'d';
 }
 .soc-linkedin:before {
     content:'j';
+}
+.soc-google:before {
+    content:'c';
+}
+.soc-twitter:before {
+    content:'a';
 }
 
 
