--- a/css/socicon.css
+++ b/css/socicon.css
@@ -20,8 +20,10 @@
 
 .soc {
     overflow:hidden;
-    margin:0; padding:0;
+    margin:0; 
+    padding:0;
     list-style:none;
+    background-color: #9a9a9a;
 }
 
 .soc li {
@@ -58,8 +60,8 @@
     display:block;
     position: relative;
     z-index: 1;
-    width: 3em;
-    height: 3em;
+    width: 1.5em;
+    height: 1.5em;
     line-height: 29px;
     font-size: 1em;
     -webkit-border-radius: 100px;
@@ -100,9 +102,9 @@
 
 
 .soc li a {
-    width: .5em;
-    height: .5em;
-    font-size: .3em;
+    width: 1em;
+    height: 1em;
+    font-size: 1em;
 
 }
 
