--- a/css/socicon.css
+++ b/css/socicon.css
@@ -60,17 +60,23 @@
     display:block;
     position: relative;
     z-index: 1;
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.6em;
+    height: 1.6em;
     line-height: 29px;
     font-size: 1em;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px;
     margin-right: 10px;
-    color: #ffffff;
-    background-color: #ececec;
+    color: #fefefe;
+    background-color: none;
 }
+
+.soc a:hover {
+    z-index: 2;
+    color: #666666 !important;
+}
+
 
 .soc-icon-last{
     margin:0 !important;
@@ -102,9 +108,9 @@
 
 
 .soc li a {
-    width: 1em;
-    height: 1em;
-    font-size: 1em;
+    width: .5em;
+    height: .5em;
+    font-size: .3em;
 
 }
 
