--- a/css/socicon.css
+++ b/css/socicon.css
@@ -24,6 +24,8 @@
     padding:0;
     list-style:none;
     background-color: #9a9a9a;
+    margin-top: 2em;
+    margin-top: 2em;
 }
 
 .soc li {
@@ -121,7 +123,11 @@
 }
 
 
-
+.soc a:hover {
+    z-index: 2;
+    color: #666666 !important;
+    border: 0.5px solid #666666;
+}
 
 
 }
