--- a/css/socicon.css
+++ b/css/socicon.css
@@ -25,7 +25,7 @@
     list-style:none;
     background-color: #9a9a9a;
     margin-top: 2em;
-    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .soc li {
@@ -122,11 +122,22 @@
     border: 0.5px solid #fefefe;
 }
 
+.soc {
+    overflow:hidden;
+    margin:0; 
+    padding:0;
+    list-style:none;
+    background-color: #9a9a9a;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
 
 .soc a:hover {
     z-index: 2;
     color: #666666 !important;
-    border: 0.5px solid #666666;
+    border: 0.5px solid #1a1a1a;
 }
 
 
