--- a/css/socicon.css
+++ b/css/socicon.css
@@ -136,8 +136,8 @@
 
 .soc a:hover {
     z-index: 2;
-    color: #aaaaaa !important;
-    border: 0.5px solid #aaaaaa;
+    color: #ececec !important;
+    border: 0.5px solid #cecece;
 }
 
 
