--- a/css/css.css
+++ b/css/css.css
@@ -584,6 +584,7 @@ margin-bottom: .5em;
 #me-intro-box{
   
   padding: 6vw;
+  padding-bottom: 0;
   text-align: left;
 }
 #me-intro-p{
@@ -620,7 +621,7 @@ margin-bottom: .5em;
 #contact-info{
   border: 0px solid red;
   padding: 6vw;
-  padding-bottom: 0vw;
+
 }
 
 .contact-content{
