--- a/css/socicon.css
+++ b/css/socicon.css
@@ -62,9 +62,9 @@
     display:block;
     position: relative;
     z-index: 1;
-    width: 2em;
-    height: 2em;
-    line-height: 2em;
+    width: 2.1em;
+    height: 2.1em;
+    line-height: 2.1em;
     font-size: 1em;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
@@ -77,8 +77,8 @@
 
 .soc a:hover {
     z-index: 2;
-    color: #666666 !important;
-    border: 1px solid #666666;
+    color: #ececec !important;
+    border: 1px solid #ececec;
 }
 
 
@@ -137,7 +137,7 @@
 .soc a:hover {
     z-index: 2;
     color: #ececec !important;
-    border: 0.5px solid #cecece;
+    border: 0.5px solid #ececec;
 }
 
 
