--- a/css/css.css
+++ b/css/css.css
@@ -3,7 +3,9 @@
   padding-top: 1em;
 }
 
-
+:focus {
+  outline:none;
+}
 
 
 *{
@@ -602,6 +604,8 @@ margin-bottom: .5em;
 #contact{
   display: flex;
   position: relative;
+   padding-left: 6vw;
+   padding-right: 6vw;
 }
 #contact-img{
     border: 0px solid red;
@@ -621,7 +625,7 @@ margin-bottom: .5em;
 }
 #contact-info{
   border: 0px solid red;
-  padding: 6vw;
+  
 
 }
 
@@ -925,7 +929,8 @@ border: 0px solid yellow;
 #contact{
   display: flex;
   position: relative;
-  margin: 8vw;
+  padding-left: 8vw;
+  padding-right: 8vw;
 
 }
 #contact-img{
