--- a/css/css.css
+++ b/css/css.css
@@ -5,6 +5,7 @@
 
 :focus {
   outline:none;
+
 }
 
 
@@ -604,8 +605,6 @@ margin-bottom: .5em;
 #contact{
   display: flex;
   position: relative;
-   padding-left: 6vw;
-   padding-right: 6vw;
 }
 #contact-img{
     border: 0px solid red;
@@ -625,7 +624,7 @@ margin-bottom: .5em;
 }
 #contact-info{
   border: 0px solid red;
-  
+  padding: 6vw;
 
 }
 
@@ -929,8 +928,7 @@ border: 0px solid yellow;
 #contact{
   display: flex;
   position: relative;
-  padding-left: 8vw;
-  padding-right: 8vw;
+  margin: 8vw;
 
 }
 #contact-img{
