--- a/css/css.css
+++ b/css/css.css
@@ -622,9 +622,19 @@ margin-bottom: .5em;
   text-align: center;
   margin: auto;
 }
+#contact-form{
+   /*padding-left: 6vw;
+  padding-right: 6vw;*/
+border: 1px solid red;
+}
+#contact-container{
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
 #contact-info{
   border: 0px solid red;
-  padding: 6vw;
+  /*padding-left: 6vw;
+  padding-right: 6vw;*/
 
 }
 
@@ -638,9 +648,7 @@ a[href^="tel"]{
     color:inherit;
     text-decoration:none;
 }
-#contact-form{
-border: 1px solid red;
-}
+
 
 .footer{
   background-color: #9a9a9a;
