--- a/css/css.css
+++ b/css/css.css
@@ -643,17 +643,21 @@ textarea:-ms-input-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
 ::-webkit-input-placeholder { /* Chrome */
   color: red;
+  font-size: 1em;
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: red;
+  font-size: 1em;
 }
 ::-moz-placeholder { /* Firefox 19+ */
   color: red;
   opacity: 1;
+  font-size: 1em;
 }
 :-moz-placeholder { /* Firefox 4 - 18 */
   color: red;
   opacity: 1;
+  font-size: 1em;
 }
 .form-element{
   display: block;
