--- a/css/css.css
+++ b/css/css.css
@@ -643,7 +643,7 @@ textarea:-ms-input-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
 ::-webkit-input-placeholder { /* Chrome */
   color: #9a9a9a;
-  font-size: 1em;
+  font-size: 20px;
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: #9a9a9a;
