--- a/css/css.css
+++ b/css/css.css
@@ -644,7 +644,7 @@ textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
 ::-webkit-input-placeholder { /* Chrome */
   color: #9a9a9a;
   font-size: 16px;
-  
+
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: #9a9a9a;
@@ -661,6 +661,13 @@ textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
   font-size: 16px;
 }
 input[type=text]{
+
+
+color:#9a9a9a;
+font-size:16px ;
+line-height:12vw;
+padding: 10px ;
+
   border: 1px solid #9a9a9a;
   border-radius: 3px;
 
@@ -670,6 +677,21 @@ input[type=text]{
   margin-bottom: 3vw;
   height: 12vw;
 }
+
+.dap_text_box
+{ 
+background:#F5F5F5;
+color:#999999;
+border:1px solid #CFCDCD;
+border-radius:4px ;
+font-size:19px ;
+height: 30px ;
+line-height:30px ;
+width: 250px ;
+padding: 10px ;
+
+}
+
 
 #contact-info{
   border: 0px solid red;
