--- a/css/css.css
+++ b/css/css.css
@@ -642,34 +642,37 @@ textarea::-moz-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-ms-input-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
 ::-webkit-input-placeholder { /* Chrome */
-  color: #9a9a9a;
+  color: #ececec;
   font-size: 16px;
 
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: #9a9a9a;
+  color: #ececec;
   font-size: 16px;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: #9a9a9a;
+  color: #ececec;
   opacity: 1;
   font-size: 16px;
 }
 :-moz-placeholder { /* Firefox 4 - 18 */
-  color: #9a9a9a;
+  color: #ececec;
   opacity: 1;
   font-size: 16px;
 }
 input[type=text]{
-
+ -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    
 background:#fefefe;
 color:#9a9a9a;
 font-size:16px ;
 line-height:12vw;
 padding: 10px ;
-box-shadow: -50px 50px 0px #FFFFFF; 
--webkit-box-shadow: -50px 50px 0px #FFFFFF; 
--moz-box-shadow: -50px 50px 0px #FFFFFF; 
+box-shadow: 0px 0px 0px #FFFFFF; 
+-webkit-box-shadow: 0px 0px 0px #FFFFFF; 
+-moz-box-shadow: 0px 0px 0px #FFFFFF; 
 border: 1px solid #9a9a9a;
 border-radius: 3px;
 
