--- a/css/css.css
+++ b/css/css.css
@@ -642,21 +642,21 @@ textarea::-moz-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-ms-input-placeholder { font-size: 1em; color: #9a9a9a; }
 textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
 ::-webkit-input-placeholder { /* Chrome */
-  color: #ececec;
+  color: #cccccc;
   font-size: 16px;
 
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: #ececec;
+  color: #cccccc;
   font-size: 16px;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: #ececec;
+  color: #cccccc;
   opacity: 1;
   font-size: 16px;
 }
 :-moz-placeholder { /* Firefox 4 - 18 */
-  color: #ececec;
+  color: #cccccc;
   opacity: 1;
   font-size: 16px;
 }
@@ -685,7 +685,7 @@ border-radius: 3px;
     appearance: none;
 
 background:#fefefe;
-color:#9a9a9a;
+
 font-size:16px ;
 line-height:12vw;
 padding: 10px ;
@@ -697,6 +697,7 @@ border-radius: 3px;
  display: block;
   margin-bottom: 3vw;
   height: 12vw;
+  color:#9a9a9a;
 }
 #message{
   height: 36vw;
