--- a/css/css.css
+++ b/css/css.css
@@ -661,23 +661,7 @@ textarea:-moz-placeholder { font-size: 1em; color: #9a9a9a; }*/
   font-size: 16px;
 }
 /*input[type=text]{
- -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-background:#fefefe;
-color:#9a9a9a;
-font-size:16px ;
-line-height:12vw;
-padding: 10px ;
-box-shadow: 0px 0px 0px #FFFFFF; 
--webkit-box-shadow: 0px 0px 0px #FFFFFF; 
--moz-box-shadow: 0px 0px 0px #FFFFFF; 
-border: 1px solid #cccccc;
-border-radius: 3px;
- display: block;
-  margin-bottom: 3vw;
-  height: 12vw;
+ 
 }*/
 .form-element{
  -webkit-appearance: none;
@@ -686,12 +670,12 @@ border-radius: 3px;
 
 background:#fefefe;
 
-font-size:16px ;
+font-size:1em ;
 line-height:12vw;
-padding: 10px ;
-box-shadow: 0px 0px 0px #FFFFFF; 
+padding: 1em ;
+/*box-shadow: 0px 0px 0px #FFFFFF; 
 -webkit-box-shadow: 0px 0px 0px #FFFFFF; 
--moz-box-shadow: 0px 0px 0px #FFFFFF; 
+-moz-box-shadow: 0px 0px 0px #FFFFFF; */
 border: 1px solid #cccccc;
 border-radius: 3px;
  display: block;
@@ -701,7 +685,7 @@ border-radius: 3px;
 }
 #message{
   height: 36vw;
-
+padding: 1em ;
 }
 
 
