--- a/css/css.css
+++ b/css/css.css
@@ -684,9 +684,8 @@ border-radius: 3px;
   color:#9a9a9a;
 }
 #message{
-  height: 36vw;
-  padding-left: 1em;
-  padding-top: 1em;
+line-height:0;
+padding: 1em;
 }
 
 
