--- a/css/css.css
+++ b/css/css.css
@@ -57,7 +57,7 @@ border: 0px solid red;
   font-size: 1.06em;
   margin:0px;
   padding-left: 10vw;
-  border: 1px solid red;
+  border: 0px solid red;
   
   height: 10vh;
 text-align: left;
@@ -682,10 +682,9 @@ border: 1px solid #cccccc;
   margin-bottom: 3vw;
   height: 12vw;
   color:#9a9a9a;
-
+padding-left: 1em;
 text-align: left;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
 
 }
@@ -703,9 +702,11 @@ padding-top: 1em;
   display: -webkit-flex;
   display:         flex;
   text-align: center;
+  align-items: center;
 }
 
 #send-btn.div{
+
   margin: auto;
 }
 
