--- a/css/css.css
+++ b/css/css.css
@@ -1034,7 +1034,7 @@ border: 0px solid yellow;
   height: 35vw;
   border: 0px solid blue;
   display: flex;
-  width:30%;
+  width:33.3%;
 }
 
 #contact-title{
@@ -1046,7 +1046,7 @@ border: 0px solid yellow;
   /*height: 10%;*/
 }
 #contact-info{
-  width: 100%;
+  width: 33.3%;
   border: 0px solid red;
   padding: 3vw;
 }
@@ -1067,7 +1067,7 @@ border: 0px solid yellow;
 }
 #contact-container{
   padding: 0px;
-  width: 70%;
+  width: 33.3%;
   display: flex;
   flex-wrap: wrap;
   border: 0px solid blue;
@@ -1075,7 +1075,7 @@ border: 0px solid yellow;
 
 
 .form-element{
-  width: 30%;
+  width: 100%;
  -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -1086,10 +1086,10 @@ font-size:.3em ;
 /*line-height:1em;
 padding-left: .5em;
 padding-top: .5em;*/
-border: .5px solid #cccccc;
+border: .2px solid #cccccc;
   -webkit-border-radius: .5;
   -moz-border-radius: .5;
-  border-radius: .5px;
+  border-radius: 1px;
  display: block;
   margin-bottom: 1vw;
   height: 3vw;
@@ -1105,10 +1105,11 @@ height: 10vw;
 /*line-height:0;*/
 padding-left: .5em;
 padding-top: .5em;
-width: 60%;
+width: 100%;
+height: 100%;
 }
 #send-btn{
-  width: 15%;
+  width: 50%;
   
 }
 
