--- a/css/css.css
+++ b/css/css.css
@@ -1049,6 +1049,7 @@ border: 0px solid yellow;
   width: 60%;
   border: 0px solid red;
   padding: 3vw;
+  padding-top: 0;
 }
 
 .contact-content{
@@ -1071,7 +1072,7 @@ border: 0px solid yellow;
   width: 66.7%;
   display: flex;
   flex-wrap: wrap;
-  border: 0px solid blue;
+  border: 0spx solid blue;
   
 }
 
@@ -1096,7 +1097,7 @@ border: .2px solid #cccccc;
   margin-bottom: 1vw;
   height: 3vw;
   color:#9a9a9a;
-padding-left: .5em;
+padding-left: 2em;
 text-align: left;
   display: flex;
   align-items: center;
