--- a/css/css.css
+++ b/css/css.css
@@ -1072,7 +1072,7 @@ border: 0px solid yellow;
   width: 66.7%;
   display: flex;
   flex-wrap: wrap;
-  border: 0spx solid blue;
+  border: 0px solid blue;
   
 }
 
@@ -1085,7 +1085,7 @@ border: 0px solid yellow;
 
 background:#fefefe;
 
-font-size:.22em ;
+font-size:.24em ;
 /*line-height:1em;
 padding-left: .5em;
 padding-top: .5em;*/
@@ -1097,7 +1097,7 @@ border: .2px solid #cccccc;
   margin-bottom: 1vw;
   height: 3vw;
   color:#9a9a9a;
-padding-left: 2em;
+padding-left: 1.5em;
 text-align: left;
   display: flex;
   align-items: center;
@@ -1106,13 +1106,14 @@ text-align: left;
 #message{
 height: 10vw;
 /*line-height:0;*/
-padding-left: .5em;
-padding-top: .5em;
+padding-left: 1.5em;
+
 width: 100%;
-height: 30%;
+height: 40%;
 }
 #send-btn{
-  width: 50%;
+  padding-left: 0px;
+  width: 30%;
   
 }
 
