--- a/css/css.css
+++ b/css/css.css
@@ -1062,7 +1062,7 @@ border: 0px solid yellow;
 
 #contact-form{
   display: block;
-  border: 1px solid blue;
+  border: 1px solid red;
   width: 35%;
   padding-left: 3vw;
 }
