--- a/css/css.css
+++ b/css/css.css
@@ -1062,9 +1062,10 @@ border: 0px solid yellow;
 
 #contact-form{
   display: block;
-  border: 1px solid red;
+  border: 1px solid yellow;
   width: 35%;
   padding-left: 3vw;
+  position: relative;
 }
 #contact-container{
   padding: 0px;
@@ -1112,7 +1113,7 @@ width: 100%;
 height: 50%;
 }
 #send-btn{
-  position: relative;
+  position: absolute;
   bottom: 0px;
   width: 40%;
   margin: 0px;
