--- a/css/css.css
+++ b/css/css.css
@@ -853,7 +853,7 @@ header{
 
 .horizontal:hover{
   cursor: pointer;
-  color: #e0e0e0;
+  color: #eeeeee;
   background-color: rgba(0,0,0,0);
   
 }
