--- a/css/css.css
+++ b/css/css.css
@@ -720,7 +720,12 @@ border: 0px solid red;
   text-decoration: none;
 }
 
-
+#email-result{
+  border: 1px solid red;
+  font-size: inherit;
+  color: inherit;
+  font-family: inherit;
+}
 #contact-info{
   border: 0px solid red;
   /*padding-left: 6vw;
