--- a/css/css.css
+++ b/css/css.css
@@ -722,9 +722,9 @@ border: 0px solid red;
 
 #email-result-container{
   border: 1px solid #cccccc;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3;
   margin-bottom: 3vw;
   margin-top: 6vw;
    padding-bottom: 3vw;
@@ -737,7 +737,7 @@ border: 0px solid red;
   font-size: inherit;
   color: #9a9a9a;
   font-family: inherit;
-  margin-left: auto;
+  margin: auto;
 }
 #contact-info{
   border: 0px solid red;
