--- a/css/css.css
+++ b/css/css.css
@@ -727,7 +727,7 @@ border: 0px solid red;
   border-radius: 3;
   margin-bottom: 3vw;
   margin-top: 6vw;
-   padding-bottom: 3vw;
+  padding-bottom: 3vw;
   padding-top: 3vw;
   
   background-color: #fefefe;
@@ -1122,9 +1122,9 @@ font-size:.24em ;
 padding-left: .5em;
 padding-top: .5em;*/
 border: .2px solid #cccccc;
-  -webkit-border-radius: .5;
-  -moz-border-radius: .5;
-  border-radius: 1px;
+  -webkit-border-radius: 1;
+  -moz-border-radius: 1;
+  border-radius: 1;
  display: block;
   margin-bottom: 1vw;
   height: 3.5vw;
@@ -1144,8 +1144,8 @@ width: 100%;
 height: 46%;
 }
 #send-btn{
-  position: absolute;
-  bottom: 0px;
+ /* position: absolute;
+  bottom: 0px;*/
   width: 40%;
   margin: 0px;
   display: flex;
@@ -1156,6 +1156,28 @@ height: 46%;
   margin: auto;
   text-align: center;
 }
+#email-result-container{
+  border: .2px solid #cccccc;
+  -webkit-border-radius: 1;
+  -moz-border-radius: 1;
+  border-radius: 1px;
+  margin-bottom: 1vw;
+  margin-top: 2vw;
+  padding-bottom: 1vw;
+  padding-top: 1vw;
+  
+  background-color: #fefefe;
+
+}
+#email-result{
+  border: 0px solid red;
+  font-size: .24em;
+  color: #9a9a9a;
+  font-family: inherit;
+  margin: auto;
+}
+
+
 .footer{
   
   padding-left: 8vw;
