--- a/css/css.css
+++ b/css/css.css
@@ -1122,9 +1122,9 @@ font-size:.24em ;
 padding-left: .5em;
 padding-top: .5em;*/
 border: .2px solid #cccccc;
-  -webkit-border-radius: 1;
-  -moz-border-radius: 1;
-  border-radius: 1;
+  -webkit-border-radius: .5;
+  -moz-border-radius: .5;
+  border-radius: 1px;
  display: block;
   margin-bottom: 1vw;
   height: 3.5vw;
@@ -1169,6 +1169,7 @@ height: 46%;
   background-color: #fefefe;
 
 }
+
 #email-result{
   border: 0px solid red;
   font-size: .24em;
