--- a/css/css.css
+++ b/css/css.css
@@ -1181,7 +1181,10 @@ height: 46%;
   font-family: inherit;
   margin: auto;
 }
-
+.wrong-input{
+  box-shadow: 0 0 3px red;
+  border: 1px solid red;
+}
 
 .footer{
   
