--- a/css/ring.css
+++ b/css/ring.css
@@ -131,6 +131,7 @@
   position: relative;
   width: 200px;
   height: 200px;
+  border: 1px solid red;
 }
 .uil-ring-css > div {
   position: absolute;
