--- a/css/ring.css
+++ b/css/ring.css
@@ -129,15 +129,15 @@
 .uil-ring-css {
   background: none;
   position: relative;
-  width: 10px;
-  height: 10px;
-  border: 1px solid red;
+  width: 12vw;
+  height: 12vw;
+  border: 0px solid red;
 }
 .uil-ring-css > div {
   position: absolute;
   display: block;
-  width: 10px;
-  height: 10px;
+  width: 12vw;
+  height: 12vw;
   top: 0px;
   left: 0px;
   border-radius: 80px;
@@ -148,3 +148,36 @@
   -o-animation: uil-ring-anim 1s linear infinite;
   animation: uil-ring-anim 1s linear infinite;
 }
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+.uil-ring-css {
+  background: none;
+  position: relative;
+  width: 3.5vw;
+  height: 3.5vw;
+  border: 0px solid red;
+}
+.uil-ring-css > div {
+  position: absolute;
+  display: block;
+  width: 3.5vw;
+  height: 3.5vw;
+  top: 0px;
+  left: 0px;
+  border-radius: 80px;
+  box-shadow: 0 1px 0 0 #66a558;
+  -ms-animation: uil-ring-anim 1s linear infinite;
+  -moz-animation: uil-ring-anim 1s linear infinite;
+  -webkit-animation: uil-ring-anim 1s linear infinite;
+  -o-animation: uil-ring-anim 1s linear infinite;
+  animation: uil-ring-anim 1s linear infinite;
+}
+
+
+
+
+    }
