--- a/css/css.css
+++ b/css/css.css
@@ -740,6 +740,8 @@ background-color: #f6f6f6;
 }
 .result-flex{
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .hide-result{
    display: none;
@@ -751,9 +753,13 @@ background-color: #f6f6f6;
   font-family: inherit;
   margin: auto;
 }
-.tick{
+#tick{
   width: 12vw;
   height: 12vw;
+  border: 1px solid red;
+}
+#sent-text{
+  border: 1px solid blue;
 }
 #contact-info{
   border: 0px solid red;
@@ -1167,7 +1173,7 @@ height: 46%;
 }
 #email-result-container{
   border: .2px solid #66a558;
-  border: .2px solid #66a558;
+  border: 0px solid #66a558;
   -webkit-border-radius: 1;
   -moz-border-radius: 1;
   border-radius: 1px;
@@ -1195,7 +1201,7 @@ height: 46%;
 .rolling{
   border: 1px solid blue;
 }
-.tick{
+#tick{
   width: 3.5vw;
   height: 3.5vw;
 }
