--- a/css/css.css
+++ b/css/css.css
@@ -692,7 +692,7 @@ text-align: left;
   align-items: center;
 
 }
-.wrong-input{
+.empty-input{
   box-shadow: 0 0 3px red;
   border: 1px solid red;
 }
