--- a/css/css.css
+++ b/css/css.css
@@ -1198,8 +1198,8 @@ height: 46%;
   margin-left: 0px;
 
 }
-.wrong-input{
-  box-shadow: 0 0 2px red;
+.empty-input{
+  box-shadow: 0 0 .5px red;
   border: .2px solid red;
 }
 .rolling{
