--- a/css/css.css
+++ b/css/css.css
@@ -1112,6 +1112,7 @@ border: 0px solid yellow;
   border: 0px solid yellow;
   width: 35%;
   padding-left: 3vw;
+  padding-right: .5px;
   position: relative;
 }
 #contact-container{
