--- a/css/css.css
+++ b/css/css.css
@@ -69,6 +69,9 @@ text-align: left;
   cursor: pointer;
   background-color: #fefefe;
 }
+#drawer a{
+  text-decoration:none;
+}
 
 .col-6{
   width: 50%;
